--- a/frontend/src/app/components/todo-item/todo-item.component.html
+++ b/frontend/src/app/components/todo-item/todo-item.component.html
@@ -12,7 +12,9 @@
       }}</span>
     </div>
 
-    <mat-icon class="expand-icon" [class.expanded]="isExpanded"> </mat-icon>
+    <span class="material-icons expand-icon" [class.expanded]="isExpanded">
+      expand_more
+    </span>
   </div>
 
   <div class="todo-details" *ngIf="isExpanded">
@@ -22,7 +24,7 @@
     </p>
     <div class="actions">
       <button mat-button color="warn" (click)="onDelete()">
-        <mat-icon></mat-icon>
+        <span class="material-icons">delete</span>
         Delete
       </button>
     </div>
