--- a/frontend/src/app/components/todo-main/todo-bar/todo-search/todo-search.component.html
+++ b/frontend/src/app/components/todo-main/todo-bar/todo-search/todo-search.component.html
@@ -1,5 +1,26 @@
-<mat-form-field appearance="outline">
-  <mat-label>Search todos</mat-label>
-  <input matInput [formControl]="searchControl" placeholder="Search..." />
-  <mat-icon matSuffix>search</mat-icon>
-</mat-form-field>
+<!-- src/app/components/todo-main/todo-bar/todo-search/todo-search.component.html -->
+<div class="relative">
+  <div
+    class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none"
+  >
+    <svg
+      class="h-5 w-5 text-gray-400"
+      xmlns="http://www.w3.org/2000/svg"
+      viewBox="0 0 20 20"
+      fill="currentColor"
+    >
+      <path
+        fill-rule="evenodd"
+        d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z"
+        clip-rule="evenodd"
+      />
+    </svg>
+  </div>
+  <input
+    type="text"
+    [ngModel]="searchTerm"
+    (ngModelChange)="onSearch($event)"
+    placeholder="Search todos..."
+    class="block w-full pl-10 pr-3 py-2 border border-gray-200 rounded-lg text-sm placeholder-gray-500 focus:outline-none focus:ring-1 focus:ring-blue-500 focus:border-blue-500"
+  />
+</div>
