--- a/frontend/src/app/components/todo-main/todo-bar/todo-sort/todo-sort.component.html
+++ b/frontend/src/app/components/todo-main/todo-bar/todo-sort/todo-sort.component.html
@@ -1,17 +1,21 @@
-<mat-button-toggle-group [hideSingleSelectionIndicator]="true">
-  <mat-button-toggle
-    value="none"
-    [checked]="true"
-    (change)="onSortChange('none')"
+<!-- src/app/components/todo-main/todo-bar/todo-sort/todo-sort.component.html -->
+<button
+  (click)="toggleSort()"
+  class="inline-flex items-center px-4 py-2 border border-gray-200 rounded-lg text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-1 focus:ring-blue-500"
+>
+  <span>Sort by date</span>
+  <svg
+    *ngIf="currentSort !== 'none'"
+    class="ml-2 h-4 w-4"
+    [class.rotate-180]="currentSort === 'desc'"
+    xmlns="http://www.w3.org/2000/svg"
+    viewBox="0 0 20 20"
+    fill="currentColor"
   >
-    Default
-  </mat-button-toggle>
-
-  <mat-button-toggle value="asc" (change)="onSortChange('asc')">
-    Due Date ↑
-  </mat-button-toggle>
-
-  <mat-button-toggle value="desc" (change)="onSortChange('desc')">
-    Due Date ↓
-  </mat-button-toggle>
-</mat-button-toggle-group>
+    <path
+      fill-rule="evenodd"
+      d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+      clip-rule="evenodd"
+    />
+  </svg>
+</button>
