--- a/frontend/src/app/components/todo-main/todo-bar/todo-bar.component.html
+++ b/frontend/src/app/components/todo-main/todo-bar/todo-bar.component.html
@@ -1,11 +1,12 @@
-<div class="todo-bar">
-  <!-- Title Row -->
-  <div class="title-row">
-    <h1>TODO LIST</h1>
+<!-- src/app/components/todo-main/todo-bar/todo-bar.component.html -->
+<div class="bg-white shadow-sm rounded-lg p-4 space-y-4">
+  <!-- Title -->
+  <div class="text-center">
+    <h1 class="text-2xl font-bold text-gray-900">TODO LIST</h1>
   </div>
 
   <!-- Controls Row -->
-  <div class="controls-row">
+  <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
     <app-todo-filter (filterChange)="onFilterChange($event)"> </app-todo-filter>
 
     <app-todo-search (searchChange)="onSearchChange($event)"> </app-todo-search>
@@ -13,17 +14,33 @@
     <app-todo-sort (sortChange)="onSortChange($event)"> </app-todo-sort>
   </div>
 
-  <!-- Form Toggle Row -->
-  <div class="form-toggle-row">
-    <button mat-fab color="primary" (click)="toggleForm()">
-      <mat-icon>{{ isFormExpanded ? "remove" : "add" }}</mat-icon>
+  <!-- Add Todo Button -->
+  <div class="flex justify-center">
+    <button
+      (click)="toggleForm()"
+      class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-blue-500 text-white hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 transition-colors"
+    >
+      <svg
+        [class.rotate-45]="isFormExpanded"
+        class="w-6 h-6 transition-transform duration-200"
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 20 20"
+        fill="currentColor"
+      >
+        <path
+          fill-rule="evenodd"
+          d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z"
+          clip-rule="evenodd"
+        />
+      </svg>
     </button>
   </div>
 
-  <!-- Expandable Form -->
+  <!-- Create Todo Form -->
   <div
+    *ngIf="isFormExpanded"
+    class="transition-all duration-200 ease-in-out"
     [@expandCollapse]="isFormExpanded ? 'expanded' : 'collapsed'"
-    class="form-container"
   >
     <app-todo-item mode="create" (todoCreated)="onTodoSubmitted($event)">
     </app-todo-item>
