--- a/frontend/src/app/components/todo-main/todo-main.component.scss
+++ b/frontend/src/app/components/todo-main/todo-main.component.scss
@@ -2,6 +2,8 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
+  max-width: 600px;
+  margin: 0 auto; // This centers the content horizontally
 
   .todo-content {
     flex: 1;
