--- a/frontend/src/app/components/todo-main/todo-main.component.html
+++ b/frontend/src/app/components/todo-main/todo-main.component.html
@@ -1,11 +1,11 @@
-<div class="todo-main">
+<div class="min-h-screen flex flex-col max-w-[600px] mx-auto">
   <app-todo-bar
     (criteriaChanged)="onCriteriaChanged($event)"
     (todoAdded)="onTodoAdded($event)"
   >
   </app-todo-bar>
 
-  <div class="todo-content">
+  <div class="flex-1 overflow-y-auto p-4">
     <app-todo-list
       [todos]="(filteredTodos$ | async) || []"
       (todoUpdated)="onTodoUpdated($event)"
