--- a/frontend/src/app/components/todo-main/todo-bar/todo-sort/todo-sort.component.html
+++ b/frontend/src/app/components/todo-main/todo-bar/todo-sort/todo-sort.component.html
@@ -3,7 +3,7 @@
   (click)="toggleSort()"
   class="cursor-pointer inline-flex items-center px-4 py-2 border border-gray-200 rounded-lg text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-1 focus:ring-blue-500"
 >
-  <span>Sort by date</span>
+  <span>Due Date</span>
   <ng-icon
     *ngIf="currentSort === 'none'"
     name="heroChevronUpDown"
