--- a/frontend/src/app/components/todo-main/todo-main.component.html
+++ b/frontend/src/app/components/todo-main/todo-main.component.html
@@ -1,11 +1,13 @@
 <div class="min-h-screen flex flex-col max-w-[600px] mx-auto">
-  <app-todo-bar
-    (criteriaChanged)="onCriteriaChanged($event)"
-    (todoAdded)="onTodoAdded($event)"
-  >
-  </app-todo-bar>
+  <div class="sticky top-0 z-10">
+    <app-todo-bar
+      (criteriaChanged)="onCriteriaChanged($event)"
+      (todoAdded)="onTodoAdded($event)"
+    >
+    </app-todo-bar>
+  </div>
 
-  <div class="flex-1 overflow-y-auto p-4">
+  <div class="flex-1 overflow-y-auto pt-4">
     <app-todo-list
       [todos]="(filteredTodos$ | async) || []"
       (todoUpdated)="onTodoUpdated($event)"
