--- a/frontend/src/app/components/todo-main/todo-bar/todo-bar.component.html
+++ b/frontend/src/app/components/todo-main/todo-bar/todo-bar.component.html
@@ -27,7 +27,9 @@
   </div>
   <!-- Add Todo Button Row -->
   <div class="p-4 pt-0">
-    <div class="shadow-sm bg-gray-50 hover:bg-gray-100 rounded-b-lg">
+    <div
+      class="shadow-sm bg-gray-50 hover:bg-gray-100 backdrop-blur-lg rounded-b-lg"
+    >
       <div class="flex justify-center">
         <div
           (click)="toggleForm()"
